additional work on auth

--- a/src/views/includes/header.pug
+++ b/src/views/includes/header.pug
@@ -5,4 +5,4 @@ header.container.m-0.mw-100.px-5.py-2.bg-dark
             ul.navbar-nav.ms-auto
                 li.nav-item: a(href="/contact").nav-link Contact
                 li.nav-item: a(href="/users").nav-link Users
-                li.nav-item: a(href="/profile").nav-link Profile
+                li.nav-item: a(href="/users/profile").nav-link Profile
