--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -3,8 +3,13 @@ html
     include includes/head.pug
     body
         include includes/header.pug
+
         .container.p-5.w-25
             .card: .card-body
                 h5.card-title Welcome to TypeORM Test
                 p.card-text this is a basic testing environment for TypeORM.
                 a(href='/users').card-link Go to user list
+
+        .container.w-50: .row
+            include includes/createUser.pug
+            include includes/login.pug
